projects/teun.zengerink.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teun-zengerink-com-app
  namespace: prd
  labels:
    app: teun-zengerink-com-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teun-zengerink-com-app
  template:
    metadata:
      labels:
        app: teun-zengerink-com-app
    spec:
      containers:
      - name: teun-zengerink-com-app
        image: teunzengerink/teun.zengerink.com:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
