projects/teun.zengerink.com/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: teun-zengerink-com-service
spec:
  type: LoadBalancer
  selector:
    app: teun-zengerink-com-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
