projects/teun.zengerink.com/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teun-zengerink-com-route
  namespace: prd
spec:
  parentRefs:
  - name: shared-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
      headers:
        type: Exact
        name: host
        value: teun.zengerink.com
    backendRefs:
    - name: teun-zengerink-com-service
      port: 80
